--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
 # Auto detect text files and perform LF normalization
-*.sol linguist-language=Solidity
-*.Unity3D linguist-detectable=false
+*.java linguist-detectable=true
